# personal_asistant

./: docker-compose.yml  pyproject.toml
personal_asistant/: manage.py
personal_asistant/accounts/: forms.py  models.py  urls.py  views.py
personal_asistant/accounts/migrations/: 0001_initial.py
personal_asistant/accounts/templates/accounts/: login.html
personal_asistant/noteapp/: admin.py  models.py  urls.py  views.py
personal_asistant/noteapp/migrations/: 0001_initial.py  0002_note_doe_date.py
personal_asistant/noteapp/templates/noteapp/: calendar.html  index.html  task.html
personal_asistant/personal_asistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_asistant/templates/: base.html
