[tool.poetry]
name = "personal-asistant"
version = "0.1.0"
description = ""
authors = ["SergRusetskiy1974 <sergrus1974@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.2.3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
